# adam

./: Cargo.toml  MAC-package-lock.json  README.md  justfile  package-lock.json  tailwind.config.js  test.hurl
.cargo/: config.toml
.github/workflows/: ci.yml
.zellij/: run.kdl  run_release.kdl  simple.kdl  simple_release.kdl
controller/: Cargo.toml
controller/src/: auth.rs  htmx.rs  main.rs  surreal.rs
controller/src/firewall/: mod.rs  test.rs
docs/: advanced_usage.tex  api_reference.tex  architecture.tex  ci_guide.tex  frontend_guide.tex  github_actions_guide.tex  performance_tuning.tex  security_guide.tex  testing_guide.tex  troubleshooting.tex  usage_guide.tex
firewall/: Cargo.toml
firewall-common/: Cargo.toml
firewall-common/src/: lib.rs
firewall-ebpf/: Cargo.toml
firewall-ebpf/src/: main.rs
firewall/migrations/2024-09-23-225819_create_rules/: up.sql
firewall/migrations/2024-10-24-213600_events/: up.sql
firewall/src/: main.rs
front/: Cargo.toml  index.html
front-components/: Cargo.toml
front-components/src/: lib.rs
front/src/: _nav.js  auth.rs  firewall.rs  firewall_events.js  ips.rs  main.rs  routes.js  sip.rs  surreal.rs  template.rs
front/src/assets/brand/: logo.js
front/src/components/: AppFooter.js
front/src/views/pluggins/catalog/: Catalog.js
front/src/views/pluggins/firewall/: Firewall.js
front/static/: input.css  styles.css
message/: Cargo.toml
message/src/: firewall.rs  lib.rs
netp/: Cargo.toml
netp/src/: aya.rs
netp/src/link/: eth.rs
netp/src/network/: ipnum.rs  ipv4.rs
netp/src/transport/: tcp.rs
service-monitor/: package-lock.json  package.json
service-monitor/src/: AddRuleFormModal.js  App.css  App.js  ContactFormModal.js  FirewallRules.js  Modal.css  Modal.js  WebSocketMessages.js
xtask/src/: build.rs  build_ebpf.rs  run.rs
