[workspace]
members = ["xtask", "firewall", "firewall-common", "controller", "message", "netp"]
resolver = "2"

[workspace.dependencies]
bstr = "1.10.0"
async-bincode = "0.7.2"
futures = "0.3.30"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
schemars = { version = "0.8.21" }
