cargo-features = ["codegen-backend"]

[workspace]
members = ["xtask", "firewall", "firewall-common", "controller", "message", "netp", "front", "front-components"]
resolver = "2"

[workspace.dependencies]
bstr = "1.11.0"
async-bincode = "0.7.2"
futures = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133" }
schemars = { version = "0.8.21" }
deadpool = "0.12.1"
maud = { version = "0.26.0", features = ["axum"] }
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
log = "0.4.22"

[profile.dev]
debug = 0
codegen-backend = "cranelift"
