[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
axum = { version = "0.7.5", features = ["ws"] }
tower-http = { version = "0.6.1", features = ["cors"] }

serde_json.workspace = true
serde.workspace = true
deadpool.workspace = true
futures.workspace = true
maud.workspace = true
chrono.workspace = true
log.workspace = true
env_logger.workspace = true

message.path = "../message"
front-components.path = "../front-components"
clap = { version = "4.5.21", features = ["derive"] }
