[package]
name = "firewall-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
user = ["dep:serde", "netp/serde"]
aya = ["dep:aya"]
bpf = ["dep:aya-ebpf"]
schema = ["user", "dep:schemars", "netp/schema"]

[dependencies]
aya = { version = "0.12", optional = true }
aya-ebpf = { version = "0.1.0", optional = true }
netp.path = "../netp"
serde = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"
