[package]
name = "firewall-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde = ["dep:serde", "netp/serde"]
aya = ["dep:aya"]
bpf = ["dep:aya-ebpf"]
schema = ["serde", "dep:schemars", "netp/schema", "schemars/chrono"]
chrono = ["dep:chrono"]

[dependencies]
aya = { version = "0.13", optional = true }
aya-ebpf = { version = "0.1.0", optional = true }
netp.path = "../netp"
serde = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"
