[package]
name = "firewall"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
clap = { version = "4.1", features = ["derive"] }
firewall-common = { path = "../firewall-common", features = ["serde", "aya"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time", "fs"] }
netp.path = "../netp"
bstr.workspace = true
serde.workspace = true
serde_json.workspace = true
message = { path = "../message" }
futures.workspace = true
diesel = { version = "2.2.4", features = ["sqlite"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
diesel-async = { version = "0.5.0", features = ["async-connection-wrapper", "sqlite", "sync-connection-wrapper"] }
deadpool.workspace = true
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenv = "0.15.0"
bincode = "*"

[[bin]]
name = "firewall"
path = "src/main.rs"
