[package]
name = "front"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
axum = "0.7.6"
reqwest = "0.12.7"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }

maud.workspace = true
serde_json.workspace = true
serde.workspace = true

firewall-common = { path = "../firewall-common", features = ["serde"] }
message.path = "../message"
front-components.path = "../front-components"
