[package]
name = "front"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
axum = { version = "0.7.9", features = ["macros"] }
reqwest = "0.12.9"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }

maud.workspace = true
serde_json.workspace = true
serde.workspace = true
log.workspace = true
env_logger.workspace = true
deadpool.workspace = true

firewall-common = { path = "../firewall-common", features = ["serde"] }
message.path = "../message"
front-components.path = "../front-components"
terminal-link = "0.1.0"
surrealdb = { version = "2.1.0", default-features = false, features = ["kv-rocksdb"] }
dirs = "5.0.1"
tower-http = { version = "0.6.2", features = ["fs"] }
